--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -81,7 +81,7 @@
                 SpeechBrain has established itself as a leading deep learning toolkit
                 for speech processing in recent years, with impressive usage statistics
                 to back it up. With an average of 100 daily clones and 1000 daily
-                downloads on its GitHub repository, along with over 5,258 stars and 1000
+                downloads on its GitHub repository, along with over 6,000 stars and 1100
                 forks, SpeechBrain is a popular choice among speech processing
                 experts.
                 </p>
@@ -111,7 +111,6 @@
                     The core idea is to avoid missing this chance to be a part of shaping the future of speech technologies and building valuable connections within the community. <br/><br/>
                 </p>
             </div>
-
             <div class="main_title">
                 <h2>Tentative Schedule</h2>
                 <p class="justified large"> The event will start at 9am Eastern Standard Time (EST) on August 28th and, we will have two sessions with a break from 11.30-12.30. <br/><br/>
@@ -150,10 +149,10 @@
                         <img src=".">
                     </div>
                     <div class="speaker-info">
-                        <h3 class="justified">X, ViaDialog</h3>
-                        <p class="justified">Title: </p>
+                        <h3 class="justified">Ariane Nabeth Halber, Artificial Intelligence & Innovation director, ViaDialog</h3>
+                        <p class="justified">Title: How ViaDialog sponsors speechbrain and brings hyperlarge vocabulary speech technologies to the contact centres</p>
                         <p class="justified">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                            Ariane Nabeth-Halber has been working in the speech industry for 25 years. She started her career in research (ATR, Japan; Thalès, France), and then moved to the speech industry, namely with Nuance Communication, and French company Bertin IT, working there with contact centres, broadcasters, trading floors and public ministries, but also academic labs such as LIUM and Avignon University/LIA. Since August 2021, Ariane Nabeth-Halber leads the Speech and Conversational AI team at ViaDialog, to deliver efficient and safe customer relationship experiences. A European Commission expert and LT-Innovate board member, Ariane holds a PhD in computer science and signal processing from Telecom ParisTech. She regularly speaks at conferences on AI and speech technology.
                         </p>
                     </div>
                     </div>
@@ -165,10 +164,10 @@
                     <img src=".">
                 </div>
                 <div class="speaker-info">
-                    <h3 class="justified">X, UbenwaAI</h3>
-                    <p class="justified">Title: Continual Learning for End-to-End ASR by Averaging Domain Experts.</p>
+                    <h3 class="justified">Arsenii Gorin, UbenwaAI</h3>
+                    <p class="justified">Title: Deep learning for infant cry classification.</p>
                     <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                        Arsenii is the lead ML research scientist Ubenwa. He obtained a PhD from Université de Lorraine working on Automatic Speech Recognition. His main research interests are practical applications of machine learning techniques for audio and speech processing.
                     </p>
                 </div>
                 </div>
@@ -222,7 +221,7 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src=".">
+                      <img src="img/summit/shinji-watanabe.png">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Shinji Watanabe, ESPNet</h3>
@@ -281,8 +280,7 @@
                       <h3 class="justified">Zhaoheng Ni, Torchaudio</h3>
                     <p class="justified">Title: </p>
                     <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                    </p>
+Zhaoheng Ni is a research scientist in the PyTorch Audio team of Meta. He graduated from City University of New York supervised by Professor Michael Mandel then joined Meta AI as a research scientist in 2021. His research interests are single-channel and multi-channel speech enhancement, speech separation, and robust ASR.                    </p>
                   </div>
                 </div>
             </div>
@@ -293,59 +291,78 @@
             <h2>Organizing Commitee</h2>
         </div>
 
-
         <div class="speaker-cards">
             <div class="speaker-card">
               <div class="speaker-image mx-auto">
-                  <img src=".">
+                  <img src="img/summit/titouan_parcollet.jpg">
               </div>
               <div class="speaker-info">
-                  <h3 class="justified">Titouan Parcollet (SpeechBrain, Samsung AI Cambridge)</h3>
-                <p class="justified">Title</p>
+                  <h3 class="justified">Titouan Parcollet, SpeechBrain, Samsung AI Cambridge.</h3>
                 <p class="justified">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+Titouan  is a Research Scientist at the Samsung AI Research center in Cambridge (UK) and a visiting scholar at the Cambridge Machine Learning Systems Lab from the University of Cambridge (UK). 
+Previously, he was an Associate Professor in computer science at the Laboratoire Informatique d’Avignon (LIA), from Avignon University (FR). 
+He also was a senior research associate at the University of Oxford (UK) within the Oxford Machine Learning Systems group. He received his PhD in 
+computer science from the University of Avignon (FR) and in partnership with Orkis focusing on quaternion neural networks, automatic speech recognition, 
+and representation learning. His current work involves efficient speech recognition, federated learning, and self-supervised learning. He is also currently 
+collaborating with the University of Montréal (Mila, QC, Canada) as the co-leader of the SpeechBrain project.
                 </p>
               </div>
             </div>
-              <div class="speaker-card">
-                  <div class="speaker-image mx-auto">
-                      <img src=".">
-                  </div>
-                  <div class="speaker-info">
-                      <h3 class="justified">Mirco Ravanelli (SpeechBrain, Concordia University)</h3>
-                      <p class="justified">Title</p>
-                      <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                      </p>
-                  </div>
-                </div>
-            </div>
-          </div>
-          <div class="speaker-cards">
-            <div class="speaker-card">
-              <div class="speaker-image mx-auto">
-                  <img src=".">
-              </div>
-              <div class="speaker-info">
-                  <h3 class="justified">Cem Subakan (SpeechBrain, Université Laval)</h3>
-                <p class="justified">Title</p>
-                <p class="justified">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                </p>
-              </div>
-            </div>
+
+
             <div class="speaker-card">
                 <div class="speaker-image mx-auto">
                     <img src=".">
                 </div>
                 <div class="speaker-info">
-                    <h3 class="justified">Andreas Nautsch (SpeechBrain, Université d'Avignon)</h3>
-                <p class="justified">Title</p>
-                <p class="justified">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                </p>
+                    <h3 class="justified">Cem Subakan, SpeechBrain, Université Laval</h3>
+                  <p class="justified">
+Cem is an Assistant Professor at Université Laval in the Computer Science and Software Engineering department. 
+He is also currently an Affiliate Assistant Professor in the Concordia University Computer Science and Software Engineering Department, 
+and an invited researcher at Mila, Québec AI Institue. He received his PhD in Computer Science from University of Illinois at Urbana-Champaign (UIUC), 
+and did a postdoc in Mila Québec AI Institute and Université de Sherbrooke. He serves as reviewer in several conferences including Neurips, ICML, ICLR, ICASSP, MLSP and 
+journals such as IEEE Signal Processing Letters (SPL), IEEE Transactions on Audio, Speech, and Language Processing (TASL). His research interests include Deep learning for 
+Source Separation and Speech Enhancement under realistic conditions, Neural Network Interpretability, and Latent Variable Modeling. He is a recipient of best paper award 
+in the 2017 version IEEE Machine Learning for Signal Processing Conference (MLSP), as well as the Sabura Muroga Fellowship from the UIUC CS department. 
+He's a core contributor to the SpeechBrain project, leading the speech separation part.                  
+</p>
                 </div>
+              </div>
+          </div>
+          <div class="speaker-cards">
+
+            <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src="img/summit/adel_moumen_2023.png">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">Adel Moumen, SpeechBrain, Université d'Avignon</h3>
+
+                    <p class="justified">
+Adel is a research engineer at University of Avignon (FR). He completed his Bachelor's degree in computer science with distinction in an innovation and research-devoted curriculum
+and earned a two-year entrepreneurship diploma in 2022. Currently, Adel is participating in a master's apprenticeship program in computer science with specialization in AI, 
+where he professionally contributes to the development of SpeechBrain, an all-in-one, open-source, PyTorch-based speech processing toolkit. At SpeechBrain, he leads the efforts 
+of the automatic speech recognition community.
+                      </p>
+                </div>
+              </div>
+
+          <div class="speaker-card">
+            <div class="speaker-image mx-auto">
+                <img src=".">
             </div>
+            <div class="speaker-info">
+                <h3 class="justified">Mirco Ravanelli, SpeechBrain, Concordia University</h3>
+                <p class="justified">
+Mirco is an assistant professor at Concordia University, an adjunct professor at Université de Montréal, and Mila associate member. 
+His main research interests are deep learning and Conversational AI. He is the author or co-author of more than 60 papers on these research topics. 
+He received his Ph.D. (with cum laude distinction) from the University of Trento in December 2017. 
+Mirco is an active member of the speech and machine learning communities. He is the founder and leader of the SpeechBrain project which aim to build an 
+open-source toolkit for conversational AI and speech processing. 
+</p>
+            </div>
+          </div>
+      </div>
         </div>
 
         <div class="speaker-cards">
@@ -354,24 +371,35 @@
                   <img src=".">
               </div>
               <div class="speaker-info">
-                  <h3 class="justified">François Grondin (SpeechBrain, Université Sherbrooke)</h3>
-                <p class="justified">Title</p>
+                  <h3 class="justified">François Grondin, SpeechBrain, Université de Sherbrooke</h3>
                 <p class="justified">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+François is an Assistant Professor at Université de Sherbrooke (CA) in the Department of Electrical Engineering and Computer Engineering since 2020. 
+He was a Postdoctoral Associate at the Computer Science & Artificial Intelligence Laboratory (CSAIL), at Massachusetts Institute of Technology (USA), from 2018 to 2020. 
+He received his PhD in electrical engineering from Université de Sherbrooke (CA) in 2017. He serves as a reviewer for multiple conferences including ICASSP, INTERSPEECH, RSJ/IROS, 
+ICRA and journals such as Transactions on Audio, Speech and Language Processing, EURASIP Journal on Audio, Speech, and Music Processing, IEEE Transactions on Robotics, IEEE Robotics and 
+Automation Letters, IEEE Robotics and Automation Letters, Transactions on Pattern Analysis and Machine Learning. His current work involves multichannel speech enhancement, 
+sound source localization, ego-noise suppression, sound classification, 
+robot audition and hybrid signal processing/machine learning approaches. He contributed to the multichannel processing tools in the SpeechBrain project.                
                 </p>
               </div>
             </div>
-              <div class="speaker-card">
-                  <div class="speaker-image mx-auto">
-                      <img src=".">
-                  </div>
-                  <div class="speaker-info">
-                      <h3 class="justified">Adel Moumen (SpeechBrain, Université d'Avignon)</h3>
-                      <p class="justified">Title</p>
-                      <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                      </p>
-                  </div>
+
+            <div class="speaker-card">
+                <div class="speaker-image mx-auto">
+                    <img src=".">
+                </div>
+                <div class="speaker-info">
+                    <h3 class="justified">Andreas Nautsch, SpeechBrain, Université d'Avignon</h3>
+                <p class="justified">
+Andreas is research engineer for SpeechBrain, at Université d'Avignon. He received his doctorate from TU Darmstadt (2019; with inter/national distinctions). 
+Andreas served as project editor for ISO/IEC 19794-13 (biometric voice data interchange format; 2015 to~'18), co-organised editions of the VoicePrivacy and ASVspoof challenges (2019 to~'21), 
+co-initiated the ISCA SIG on Security & Privacy in Speech Communication (SPSC; 2019 to~'22), was an Associate Editor for the EURASIP Journal on Audio, Speech, and Music Processing (2020 to~'22), 
+and co-lead the 2021 Lorentz workshop on Speech as Personal Identifiable Information. From 2012 to~'21, Andreas participated in NIST Speaker Recognition Evaluations (changing industrial/academic affiliations); 
+within the I4U consortium, he was in charge for the final classifier fusion to meet score calibration demands of NIST-preset thresholds at undisclosed speech data quality. 
+By 2020, he lead multidisciplinary publication teams composed of speech & language technologists, legal scholars, cryptographers, and biometric experts; 
+Andreas co-responded on behalf of ISCA SIG-SPSC to the public consultation of the 2021 EDPB guidelines on virtual voice assistants. 
+In 2022/'23, he readied SpeechBrain for its next major version release. 
+                </p>
                 </div>
             </div>
           </div>
