--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -108,24 +108,25 @@
                     academia to showcase their impactful projects and share their knowledge
                     with the community.<br/><br/>
                     <b>•</b> This event is not only an opportunity to learn and stay updated, but also to network and connect with like-minded individuals in the SpeechBrain community. 
-                    The core idea is to avoid missing this chance to be a part of shaping the future of speech technologies and building valuable connections within the community. <br/><br/>
+                    The core idea is to avoid missing this chance to be a part of shaping the future of speech technologies and building valuable connections within the community.
                 </p>
-            </div>
-            <div class="main_title">
+                <hr>
                 <h2>Tentative Schedule</h2>
-                <p class="justified large"> The event will start at 9am Eastern Standard Time (EST) on August 28th and, we will have two sessions with a break from 11.30-12.30. <br/><br/>
-                    <b>•</b> 9.00 (EST) - 9.30, Opening - Thanks to Sponsors <br/><br/>
-                    <b>•</b> 9.30 - 10.00 Industry Talk 1 <br/><br/>
-                    <b>•</b> 10.00 - 10.30 Academic Talk 1 <br/><br/>
-                    <b>•</b> 10.30 - 11.00 Industry Talk 2 <br/><br/>
-                    <b>•</b> 11.00 - 11.30 Academic Talk 2 <br/><br/>
-                    <b>•</b> 11.30 - 12.00 Lunch Break <br/><br/>
-                    <b>•</b> 12.00 - 12.30 SpeechBrain Roadmap 2023 & latest updates <br/><br/>
-                    <b>•</b> 12.30 - 13.00 Industry Talk 3<br/><br/>
-                    <b>•</b> 13.00 - 13.30 Industry Talk 4 <br/><br/>
-                    <b>•</b> 13.30 - 14.00 Coffee Break <br/><br/>
-                    <b>•</b> 14.00 - 15.45 Panel Discussion and Q&A <br/><br/>
-                    <b>•</b> 15.45 - 16.00 Final Remarks, Closing <br/><br/>
+                <p class="justified large"> The event will start at 9am Eastern Standard Time (EST) on August 28th and, we will have two sessions with a break from 11.3 am - 12.30 pm. <br/><br/>
+                    <b>Morning (9.00 am - 11.30 am):</b> <br/>
+                    <b>■</b> 9.00 am &nbsp;&nbsp;&nbsp;- 9.30 &nbsp;&nbsp;&nbsp;am<span class="tabulation"></span>Opening and thanks to Sponsors <br/>
+                    <b>■</b> 9.30 am &nbsp;&nbsp;&nbsp;- 10.00 am<span class="tabulation"></span>Industry Talk 1 <br/>
+                    <b>■</b> 10.00 am - 10.30 am<span class="tabulation"></span>Academic Talk 1 <br/>
+                    <b>■</b> 10.30 am - 11.00 am<span class="tabulation"></span>Industry Talk 2 <br/>
+                    <b>■</b> 11.00 am - 11.30 am<span class="tabulation"></span>Academic Talk 2 <br/><br/>
+                    <b><i>Lunch Break (11.30 am - 12.00 pm)</b></i> <br/><br/>
+                    <b>Afternoon (12.00 pm - 12.30 pm):</b> <br/>
+                    <b>■</b> 12.00 pm - 12.30 pm<span class="tabulation"></span>SpeechBrain Roadmap 2023 & latest updates <br/>
+                    <b>■</b> 12.30 pm - 13.00 pm<span class="tabulation"></span>Industry Talk 3 <br/>
+                    <b>■</b> 13.00 pm - 13.30 pm<span class="tabulation"></span>Academic Talk 4 <br/>
+                    <b>■</b> 13.30 pm - 14.00 pm<span class="tabulation"></span>Coffee Break <br/>
+                    <b>■</b> 14.00 pm - 15.45 pm<span class="tabulation"></span>Panel Discussion and Q&A <br/>
+                    <b>■</b> 15.45 pm - 16.00 pm<span class="tabulation"></span>Final Remarks and Closing <br/>
                 </p>
 
                 <hr>
@@ -225,7 +226,6 @@
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Shinji Watanabe, ESPNet</h3>
-                    <p class="justified">Title: </p>
                     <p class="justified">
                         Shinji Watanabe is an Associate Professor at Carnegie Mellon University, Pittsburgh, PA. He received his B.S., M.S., and Ph.D. (Dr. Eng.) degrees from Waseda University, Tokyo, Japan. He was a research scientist at NTT Communication Science Laboratories, Kyoto, Japan, from 2001 to 2011, a visiting scholar at Georgia institute of technology, Atlanta, GA, in 2009, and a senior principal research scientist at Mitsubishi Electric Research Laboratories (MERL), Cambridge, MA USA from 2012 to 2017. Before Carnegie Mellon University, he was an associate research professor at Johns Hopkins University, Baltimore, MD, USA, from 2017 to 2020. His research interests include automatic speech recognition, speech enhancement, spoken language understanding, and machine learning for speech and language processing. He has published over 300 papers in peer-reviewed journals and conferences and received several awards, including the best paper award from the IEEE ASRU in 2019. He is a Senior Area Editor of the IEEE Transactions on Audio Speech and Language Processing. He was/has been a member of several technical committees, including the APSIPA Speech, Language, and Audio Technical Committee (SLA), IEEE Signal Processing Society Speech and Language Technical Committee (SLTC), and Machine Learning for Signal Processing Technical Committee (MLSP). He is an IEEE and ISCA Fellow.</p>
                   </div>
@@ -236,7 +236,6 @@
                       </div>
                       <div class="speaker-info">
                           <h3 class="justified">Dan Povey, Kaldi</h3>
-                          <p class="justified">Title: </p>
                           <p class="justified">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
                           </p>
@@ -251,7 +250,6 @@
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Brian McFee, Librosa</h3>
-                    <p class="justified">Title: </p>
                     <p class="justified">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
                     </p>
@@ -263,7 +261,6 @@
                       </div>
                       <div class="speaker-info">
                           <h3 class="justified">Boris Ginsburg, Nemo</h3>
-                          <p class="justified">Title: </p>
                           <p class="justified">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
                           </p>
@@ -278,7 +275,6 @@
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Zhaoheng Ni, Torchaudio</h3>
-                    <p class="justified">Title: </p>
                     <p class="justified">
 Zhaoheng Ni is a research scientist in the PyTorch Audio team of Meta. He graduated from City University of New York supervised by Professor Michael Mandel then joined Meta AI as a research scientist in 2021. His research interests are single-channel and multi-channel speech enhancement, speech separation, and robust ASR.                    </p>
                   </div>
