--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="speaker-card">
                     <div class="speaker-image mx-auto">
-                        <img src=".">
+                        <img src="img/summit/Photo_ArianeNabethHalber_Mars2019_11 - copie.png">
                     </div>
                     <div class="speaker-info">
                         <h3 class="justified">Ariane Nabeth Halber, Artificial Intelligence & Innovation director, ViaDialog</h3>
@@ -174,13 +174,13 @@
                 </div>
                 <div class="speaker-card">
                     <div class="speaker-image mx-auto">
-                        <img src=".">
+                        <img src="img/summit/vielzeuf.jpg">
                     </div>
                     <div class="speaker-info">
-                        <h3 class="justified">X, Orange Labs</h3>
-                        <p class="justified">Title: </p>
+                        <h3 class="justified">Vielzeuf Valentin, Orange Labs</h3>
+                        <p class="justified">Title: Speech Recognition Toolkits in Focus: Analyzing Speechbrain's Advantages and Drawbacks through some Orange’s Projects Examples.</p>
                         <p class="justified">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
+                            Valentin VIelzeuf is currently a researcher at Orange, focusing on Speech Recognition, Spoken Language Understanding and Complexity Reduction. He holds a phD thesis on Multimodal Deep Learning and also has a background in Computer Vision.
                         </p>
                     </div>
                     </div>
@@ -200,14 +200,14 @@
                 </div>
                 <div class="speaker-card">
                     <div class="speaker-image mx-auto">
-                        <img src=".">
+                        <img src="./img/summit/yannick22.jpeg">
                     </div>
                     <div class="speaker-info">
                         <h3 class="justified">Yannick Estève</h3>
                         <p class="justified">Title: </p>
                         <p class="justified">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                        </p>
+                            Yannick received the M.S. (1998) in computer science from the Aix-Marseilles University and the Ph.D. (2002) from Avignon University, France.
+                            He joined Le Mans Université (LIUM lab) in 2003 as an associate professor, and became a full professor in 2010. He moved to Avignon University in 2019 and is the head of the Computer Science Laboratory of Avignon (LIA) since 2020. He has authored and co-authored more than 150 journal and conference papers in speech and language processing.                        </p>
                     </div>
                     </div>
                 </div>
@@ -222,7 +222,7 @@
             <div class="speaker-cards">
                 <div class="speaker-card">
                   <div class="speaker-image mx-auto">
-                      <img src="img/summit/shinji-watanabe.png">
+                      <img src=".">
                   </div>
                   <div class="speaker-info">
                       <h3 class="justified">Shinji Watanabe, ESPNet</h3>
@@ -251,8 +251,9 @@
                   <div class="speaker-info">
                       <h3 class="justified">Brian McFee, Librosa</h3>
                     <p class="justified">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                    </p>
+                        Brian McFee is Assistant Professor of Music Technology and Data Science New York University.
+                        His work lies at the intersection of machine learning and audio analysis.
+                        He is an active open source software developer, and the principal maintainer of the librosa package for audio analysis.                     </p>
                   </div>
                 </div>
                   <div class="speaker-card">
@@ -308,7 +309,7 @@ collaborating with the University of Montréal (Mila, QC, Canada) as the co-lead
 
             <div class="speaker-card">
                 <div class="speaker-image mx-auto">
-                    <img src=".">
+                    <img src="img/summit/cem4_c.jpg">
                 </div>
                 <div class="speaker-info">
                     <h3 class="justified">Cem Subakan, SpeechBrain, Université Laval</h3>
@@ -345,7 +346,7 @@ of the automatic speech recognition community.
 
           <div class="speaker-card">
             <div class="speaker-image mx-auto">
-                <img src=".">
+                <img src="img/summit/photo_mirco_ravanelli.jpg">
             </div>
             <div class="speaker-info">
                 <h3 class="justified">Mirco Ravanelli, SpeechBrain, Concordia University</h3>
@@ -364,7 +365,7 @@ open-source toolkit for conversational AI and speech processing.
         <div class="speaker-cards">
             <div class="speaker-card">
               <div class="speaker-image mx-auto">
-                  <img src=".">
+                  <img src="img/summit/francois.jpeg">
               </div>
               <div class="speaker-info">
                   <h3 class="justified">François Grondin, SpeechBrain, Université de Sherbrooke</h3>
@@ -382,7 +383,7 @@ robot audition and hybrid signal processing/machine learning approaches. He cont
 
             <div class="speaker-card">
                 <div class="speaker-image mx-auto">
-                    <img src=".">
+                    <img src="img/summit/andreas.png">
                 </div>
                 <div class="speaker-info">
                     <h3 class="justified">Andreas Nautsch, SpeechBrain, Université d'Avignon</h3>
