--- a/sb_summit2023.html
+++ b/sb_summit2023.html
@@ -237,8 +237,19 @@
                       <div class="speaker-info">
                           <h3 class="justified">Dan Povey, Kaldi</h3>
                           <p class="justified">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada velit eget sapien auctor, a luctus odio varius. Donec commodo consequat risus, at congue lectus commodo id. Ut vulputate commodo justo, nec malesuada purus vulputate eu. Phasellus consectetur turpis vitae odio pharetra, non commodo sapien commodo.
-                          </p>
+                            Daniel Povey is known for many different contributions to the technology of
+                            speech recognition, including early innovations in sequence training such as
+                            Minimum Phone Error, for the Kaldi toolkit, for "next-gen Kaldi" tools
+                            k2/lhotse/Icefall/sherpa, and for the Librispeech dataset.
+                           
+                            He completed his PhD at Cambridge University in 2003, spent about
+                            ten years working for industry research labs (IBM Research and then Microsoft
+                            Research) and 7 years as non-tenure-track faculty at Johns Hopkins University.
+                            He moved to Beijing, China in November 2019 to join Xiaomi Corporation as Chief
+                            Voice Scientist.
+                           
+                            He is an IEEE Fellow as of 2023.
+                            </p>
                       </div>
                     </div>
                 </div>
